#DOKKX-5  Fixed hamburger menu z-index

--- a/dokkx/scss/modules/_nav.scss
+++ b/dokkx/scss/modules/_nav.scss
@@ -115,7 +115,7 @@
   position: absolute;
   top: 1.6em;
   right: 2em;
-  z-index: z($z-index-elements, nav);
+  z-index: z($z-index-elements, nav-toggle);
 
   height: 36px;
   width: 40px;
